# ESP32-alarm-clock

./: CLAUDE.md  CMakeLists.txt  IMG_9404.heic  IMG_9405.heic  IMG_9406.heic  IMG_9408.heic  IMG_9421.heic  IMG_9422.heic  README.md  gitignore.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: globals.h.22CD6B1A5CDAFE1D.idx  main.c.04E7E39441EEF08F.idx  ssd1309.c.BC901B2151B9DC9E.idx  ssd1309.h.6F932DD6B6259820.idx
main/: CMakeLists.txt  graphics_image.c
main/inc/: display_application.h  display_graphics.h  display_ssd1309.h  globals.h  graphics_bigfonts.h  graphics_bitmaps.h  graphics_smallfonts.h  main.h  master_alarm.h  mp3.h  nvs_state.h  passwords.h  radar_snooze.h  rotary.h  snooze.h  songs.h  ssd1309.h  wifi.h
main/src/: display_application.c  display_graphics.c  display_ssd1309.c  graphics_bigfonts.c  graphics_bitmaps.c  graphics_smallfonts.c  main.c  master_alarm.c  mp3.c  nvs_state.c  radar_snooze.c  rotary.c  snooze.c  songs.c  ssd1309.c  state_machines.c  wifi.c
